# easy-sql

./: CMakeLists.txt  LICENSE  README.md  main.cpp
epsql/: CMakeLists.txt  errorstream.hpp  postgresql.hpp
epsql/db/: database.hpp  dbresult.hpp  lambda.hpp  postgres.hpp  query.hpp  record.hpp  table.hpp  transaction.hpp  types.hpp  value.hpp
epsql/db/lambda/: field.hpp  fieldmanager.hpp  operation.hpp  query.hpp  semantictree.hpp
epsql/db/lambda/semantic/: operation.hpp  operationresult.hpp  operationresultbase.hpp  operationtree.hpp  operationtype.hpp
epsql/db/query/: createtable.hpp  queries.hpp  removetable.hpp  sizetable.hpp
epsql/db/query/translator/: createrecord.hpp  removerecord.hpp  updaterecord.hpp
epsql/db/table/: reflectiongroup.hpp  table.hpp  types.hpp
epsql/db/value/: foreignkey.hpp  value.hpp
epsql/includes/epsql/: postgresql.hpp
epsql/includes/epsql/db/: database.hpp  lambda.hpp  postgres.hpp  record.hpp  transaction.hpp
epsql/includes/epsql/db/lambda/: field.hpp  fieldmanager.hpp  query.hpp  semantictree.hpp
epsql/includes/epsql/db/lambda/semantic/: operation.hpp  operationresult.hpp  operationresultbase.hpp  operationtree.hpp
epsql/includes/epsql/db/query/: createtable.hpp  isexiststable.hpp  query.hpp  sizetable.hpp
epsql/includes/epsql/db/query/translator/: createrecord.hpp  removerecord.hpp  updaterecord.hpp
epsql/includes/epsql/db/table/: reflectiongroup.hpp  table.hpp  types.hpp
epsql/includes/epsql/db/value/: default.hpp  foreignkey.hpp  ivalue.hpp  value.hpp
epsql/includes/epsql/utils/: typeof.hpp
epsql/src/db/lambda/: field.cpp  query.cpp  semantictree.cpp
epsql/src/db/lambda/semantic/: operation.cpp  operationresult.cpp  operationtree.cpp
epsql/utils/: hash.hpp  stringcompare.hpp  typeof.hpp
esql/: CMakeLists.txt
esql/includes/esql/: errorstream.hpp  sql.hpp
esql/includes/esql/db/: core.hpp  database.hpp  dbresult.hpp  lambda.hpp  record.hpp  transaction.hpp
esql/includes/esql/db/lambda/: field.hpp  fieldmanager.hpp  query.hpp  semantictree.hpp
esql/includes/esql/db/lambda/semantic/: operation.hpp  operationresult.hpp  operationresultbase.hpp  operationtree.hpp
esql/includes/esql/db/query/: createtable.hpp  isexiststable.hpp  query.hpp  removetable.hpp  sizetable.hpp
esql/includes/esql/db/query/translator/: createrecord.hpp  removerecord.hpp  updaterecord.hpp
esql/includes/esql/db/table/: reflectiongroup.hpp  table.hpp  types.hpp
esql/includes/esql/db/table/types/: date.hpp  interval.hpp  point.hpp  time.hpp  timestamp.hpp
esql/includes/esql/db/value/: default.hpp  foreignkey.hpp  ivalue.hpp  value.hpp
esql/includes/esql/utils/: hash.hpp  typeof.hpp
esql/src/db/: postgres_core.cpp
esql/src/db/lambda/: field.cpp  query.cpp  semantictree.cpp
esql/src/db/lambda/semantic/: operation.cpp  operationresult.cpp  operationtree.cpp
esql/src/db/table/: foreignkeyreflectiongroup.cpp  reflectionregister.cpp
